--- a/app/views/games/leaderboard.html.erb
+++ b/app/views/games/leaderboard.html.erb
@@ -27,7 +27,7 @@
 </section>
 
 <div class="leaderboard__cat-wrapper">
-    <div class="leaderboard__cat">
+    <div class="leaderboard__cat js-leaderboard__cat">
         <h2 class="tab-control__title js-tab--cat ga-tab--alltime active" data-tab-cat=".leaderboard--all-time">All-Time</h2>
         <h2 class="tab-control__title js-tab--cat ga-tab--weekly" data-tab-cat=".leaderboard--weekly">Weekly</h2>
     </div>
