tailored positioning for onboarding thru fb/twtr browsers

--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -94,6 +94,12 @@ body {
         }
     }
 
+    &.social-media-browser {
+        .bottom-content__container {
+            bottom: 20vh;
+        }
+    }
+
     &.set-username-page {
         overflow: hidden;
 
