--- a/app/views/games/leaderboard_new.html.erb
+++ b/app/views/games/leaderboard_new.html.erb
@@ -162,7 +162,7 @@
                <% image = record[1] %>
                <% score = record[2] %>
 
-                    <div class="leaderboard-row">
+                    <div class="leaderboard-row <% if current_user.name == name %> leaderboard-row--current-user <% end %>">
                         <div class="leaderboard-row__wrap">
                             <span class="leaderboard-rank"><%= rank %>
                                 <span class="leaderboard__avatar" style="<% if !image.blank? %>background-image: url(<%= image %>); <% else %> background-image: url(/assets/avatar-icon.png); <% end %>"></span>
@@ -173,16 +173,6 @@
                     </div><!-- /.leaderboard-row -->
 
                 <% end %>
-                <!-- Current User -->
-                <div class="leaderboard-row leaderboard-row--current-user">
-                    <div class="leaderboard-row__wrap">
-                        <span class="leaderboard-rank"><%= current_user_record({slug:@game.slug,timeframe:'alltime'})["rank"] %>
-                            <span class="leaderboard__avatar" style="<% if current_user.oath_image %>background-image: url(<%= current_user.oath_image %>); <% else %> background-image: url(/assets/avatar-icon.png); <% end %>"></span>
-                        </span>
-                        <span class="leaderboard-user"><%= current_user.name %></span>
-                        <span class="leaderboard-score"><%= current_user_record({slug:@game.slug,timeframe:'alltime'})["score"] %></span>
-                    </div>
-                </div><!-- /.leaderboard-row--current-user -->
 
                 <% if current_user.provider.blank? || leaderboard_ranks.size <= 3 %>
                     <div class="leaderboard__social-share">
@@ -213,7 +203,7 @@
             <!-- End Loop -->
         </div> <!-- /.leaderboard--my-friends -->
 
-        <div class="tab-section js-tab-section leaderboard leaderboard--all-time <% if current_user_record({slug:@game.slug,timeframe:'alltime'})["rank"].to_i > 10 %> leaderboard--include-current <% end %>">
+        <div class="tab-section js-tab-section leaderboard leaderboard--all-time <% if current_user_record({slug:@game.slug,timeframe:'alltime'})["rank"].to_i <= 10 %> leaderboard--omit-current <% end %>">
             <% get_leaderboard_hash({game_id:@game.id,version: nil,timeframe: 'alltime'}).each_with_index do | record, i | %>
                  <% break if i > 9 %>
                 <div class="leaderboard-row <% if current_user.name == record[1]["name"] %> leaderboard-row--current-user <% end %>">
@@ -226,7 +216,7 @@
             <% end %>
 
             <!-- Current User -->
-            <div class="leaderboard-row leaderboard-row--current-user" id="leaderboard-row--current-user">
+            <div class="leaderboard-row leaderboard-row--current-user leaderboard-row--current-user-default" id="leaderboard-row--current-user">
                 <div class="leaderboard-row__wrap">
                     <span class="leaderboard-rank"><%= current_user_record({slug:@game.slug,timeframe:'alltime'})["rank"] %>
                         <span class="leaderboard__avatar" style="<% if current_user.oath_image %>background-image: url(<%= current_user.oath_image %>); <% else %> background-image: url(/assets/avatar-icon.png); <% end %>"></span>
@@ -238,11 +228,11 @@
 
         </div> <!-- /.leaderboard--all-time -->
 
-        <div class="tab-section js-tab-section leaderboard leaderboard--weekly <% if true %> leaderboard--include-current <% end %>"><!-- current_user_record({slug:@game.slug,timeframe:'alltime'})["rank"].to_i > 10 -->
+        <div class="tab-section js-tab-section leaderboard leaderboard--weekly <% if current_user_record({slug:@game.slug,timeframe:'alltime'})["rank"].to_i <= 10 %> leaderboard--omit-current <% end %>"><!-- current_user_record({slug:@game.slug,timeframe:'alltime'})["rank"].to_i > 10 -->
             <% get_leaderboard_hash({game_id:@game.id,version: nil,timeframe: 'weekly'}).each_with_index do | record, i | %>
                 <% current = true if current_user.name == record[1]["name"] %>
                  <% break if i > 9 %>
-                <div class="leaderboard-row <% if current %> leaderboard-row--current-user <% end %>" <% if current %> id="leaderboard-row--current-user" <% end %>>
+                <div class="leaderboard-row <% if current %> leaderboard-row--current-user <% end %>">
                     <div class="leaderboard-row__wrap">
                         <span class="leaderboard-rank"><%= record[0] %><span class="leaderboard__avatar" style="background-image: url('<%= record[1]["image"] %>'); "></span></span>
                         <span class="leaderboard-user"><%= record[1]["name"] %></span>
@@ -252,7 +242,7 @@
             <% end %>
 
             <!-- Current User -->
-            <div class="leaderboard-row leaderboard-row--current-user">
+            <div class="leaderboard-row leaderboard-row--current-user leaderboard-row--current-user-default" id="leaderboard-row--current-user">
                 <div class="leaderboard-row__wrap">
                     <span class="leaderboard-rank"><%= current_user_record({slug:@game.slug,timeframe:'alltime'})["rank"] %>
                         <span class="leaderboard__avatar" style="<% if current_user.oath_image %>background-image: url(<%= current_user.oath_image %>); <% else %> background-image: url(/assets/avatar-icon.png); <% end %>"></span>
