--- a/app/views/games/_leaderboard_current_user_row.html.erb
+++ b/app/views/games/_leaderboard_current_user_row.html.erb
@@ -1,7 +1,7 @@
 <!-- Current User -->
 <div class="leaderboard-row leaderboard-row--current-user leaderboard-row--current-user-default" id="leaderboard-row--current-user">
     <div class="leaderboard-row__wrap">
-        <span class="leaderboard-rank"><%= current_user_record({slug:@game.slug,timeframe: leaderboard_type})["rank"] %>
+        <span class="leaderboard-rank"><%= current_user_record({slug:@game.slug, version: leaderboard_version ||= nil, timeframe: leaderboard_type})["rank"] %>
             <span class="leaderboard__avatar" style="<% if current_user.oath_image %>background-image: url(<%= current_user.oath_image %>); <% else %> background-image: url(/assets/avatar-icon.png); <% end %>"></span>
         </span>
         <span class="leaderboard-user"><%= current_user.name %></span>
