--- a/app/views/games/_leaderboard_friends_row.html.erb
+++ b/app/views/games/_leaderboard_friends_row.html.erb
@@ -2,7 +2,7 @@
     <!-- Start Loop -->
     <!-- If Connected with Facebook -->
     <% if current_user.provider == 'facebook' %> <!--  current_user.provider == 'facebook' -->
-       <% leaderboard_ranks = get_friend_leaderboard({game_id: @game.id} ) %>
+       <% leaderboard_ranks = get_friend_leaderboard({game_id: @game.id, version: leaderboard_version ||= nil} ) %>
        <% leaderboard_ranks.each.with_index(1) do | record, rank | %>
        <% name = record[0] %>
        <% image = record[1] %>
