--- a/app/views/games/leaderboard_new.html.erb
+++ b/app/views/games/leaderboard_new.html.erb
@@ -31,34 +31,18 @@
      <div class="js-leaderboard--easy js-leaderboard-diff leaderboard-diff active">
         <h2 class="leaderboard-diff__title">Easy</h2>
         <section class="game-leaderboard">
-            <div class="tab-section js-tab-section leaderboard leaderboard--all-time active">
-                <!-- Start Loop -->
-                <% get_leaderboard_hash({game_id:@game.id,version: 1,timeframe: 'alltime'}).each_with_index do | record, i | %>
-                    <% break if i > 9 %>
-                    <div class="leaderboard-row">
-                        <div class="leaderboard-row__wrap">
-                            <span class="leaderboard-rank"><%= record[0] %><span class="leaderboard__avatar" style="background-image: url('<%= record[1]["image"] %>'); "></span></span>
-                            <span class="leaderboard-user"><%= record[1]["name"] %></span>
-                            <span class="leaderboard-score"><%= record[1]["score"] %></span>
-                        </div><!-- /.leaderboard-row__wrap -->
-                    </div><!-- /.leaderboard-row -->
-                <% end %>
-                <!-- End Loop -->
+            <%= render 'games/leaderboard_friends_row', leaderboard_version: 1 %>
+
+            <div class="tab-section js-tab-section leaderboard leaderboard--all-time <% if current_user_record({slug:@game.slug, version: 1, timeframe:'alltime'})["rank"].to_i <= 10 %> leaderboard--omit-current <% end %>">
+                <%= render 'games/leaderboard_row', { leaderboard_type: "all-time", leaderboard_version: 1} %>
+
+                <%= render 'games/leaderboard_current_user_row', { leaderboard_type: "all-time", leaderboard_version: 1 } %>
             </div>
 
-            <div class="tab-section js-tab-section leaderboard leaderboard--weekly">
-                <!-- Start Loop -->
-                <% get_leaderboard_hash({game_id:@game.id,version: 1,timeframe: 'weekly'}).each_with_index do | record, i | %>
-                    <% break if i > 9 %>
-                    <div class="leaderboard-row">
-                        <div class="leaderboard-row__wrap">
-                            <span class="leaderboard-rank"><%= record[0] %><span class="leaderboard__avatar" style="background-image: url('<%= record[1]["image"] %>'); "></span></span>
-                            <span class="leaderboard-user"><%= record[1]["name"] %></span>
-                            <span class="leaderboard-score"><%= record[1]["score"] %></span>
-                        </div><!-- /leaderboard-row__wrap -->
-                    </div><!-- /.leaderboard-row -->
-                <% end %>
-                <!-- End Loop -->
+            <div class="tab-section js-tab-section leaderboard leaderboard--weekly <% if current_user_record({slug:@game.slug, version: 1, timeframe:'weekly'})["rank"].to_i <= 10 %> leaderboard--omit-current <% end %>">
+                <%= render 'games/leaderboard_row', { leaderboard_type: "weekly", leaderboard_version: 1} %>
+
+                <%= render 'games/leaderboard_current_user_row', { leaderboard_type: "weekly", leaderboard_version: 1 } %>
             </div>
         </section>
     </div><!-- /.leaderboard-diff -->
@@ -66,108 +50,56 @@
      <div class="js-leaderboard--medium js-leaderboard-diff leaderboard-diff">
         <h2 class="leaderboard-diff__title">Medium</h2>
         <section class="game-leaderboard">
-            <div class="tab-section js-tab-section leaderboard leaderboard--all-time active">
-                <!-- Start Loop -->
-                    <div class="leaderboard-row">
-                        <span class="leaderboard-rank">1</span>
-                        <span class="leaderboard-user">John Doe</span>
-                        <span class="leaderboard-score">687</span>
-                    </div><!-- /.leaderboard-row -->
+            <%= render 'games/leaderboard_friends_row', leaderboard_version: 2 %>
 
-                    <div class="leaderboard-row">
-                        <span class="leaderboard-rank">2</span>
-                        <span class="leaderboard-user">Joe Shmoe</span>
-                        <span class="leaderboard-score">320</span>
-                    </div><!-- /.leaderboard-row -->
-                <!-- End Loop -->
+            <div class="tab-section js-tab-section leaderboard leaderboard--all-time <% if current_user_record({slug:@game.slug, version: 2, timeframe:'alltime'})["rank"].to_i <= 10 %> leaderboard--omit-current <% end %>">
+                <%= render 'games/leaderboard_row', { leaderboard_type: "all-time", leaderboard_version: 2 } %>
+
+                <%= render 'games/leaderboard_current_user_row', { leaderboard_type: "all-time", leaderboard_version: 2 } %>
             </div>
 
-            <div class="tab-section js-tab-section leaderboard leaderboard--weekly">
-                <!-- Start Loop -->
-                    <div class="leaderboard-row">
-                        <span class="leaderboard-rank">1</span>
-                        <span class="leaderboard-user">John Doe</span>
-                        <span class="leaderboard-score">687</span>
-                    </div><!-- /.leaderboard-row -->
+            <div class="tab-section js-tab-section leaderboard leaderboard--weekly <% if current_user_record({slug:@game.slug, version: 2, timeframe:'weekly'})["rank"].to_i <= 10 %> leaderboard--omit-current <% end %>">
+                <%= render 'games/leaderboard_row', { leaderboard_type: "weekly", leaderboard_version: 2 } %>
 
-                    <div class="leaderboard-row">
-                        <span class="leaderboard-rank">2</span>
-                        <span class="leaderboard-user">Joe Shmoe</span>
-                        <span class="leaderboard-score">320</span>
-                    </div><!-- /.leaderboard-row -->
-
-                    <div class="leaderboard-row">
-                        <span class="leaderboard-rank">3</span>
-                        <span class="leaderboard-user">Griff Hall</span>
-                        <span class="leaderboard-score">107</span>
-                    </div><!-- /.leaderboard-row -->
-                <!-- End Loop -->
+                <%= render 'games/leaderboard_current_user_row', { leaderboard_type: "weekly", leaderboard_version: 2 } %>
             </div>
+
         </section>
     </div><!-- /.leaderboard-diff -->
 
     <div class="js-leaderboard--hard js-leaderboard-diff leaderboard-diff">
         <h2 class="leaderboard-diff__title">Hard</h2>
         <section class="game-leaderboard">
-            <div class="tab-section js-tab-section leaderboard leaderboard--all-time active">
-                <!-- Start Loop -->
-                    <div class="leaderboard-row">
-                        <span class="leaderboard-rank">1</span>
-                        <span class="leaderboard-user">John Doe</span>
-                        <span class="leaderboard-score">687</span>
-                    </div><!-- /.leaderboard-row -->
+            <%= render 'games/leaderboard_friends_row', leaderboard_version: 3 %>
 
-                    <div class="leaderboard-row">
-                        <span class="leaderboard-rank">2</span>
-                        <span class="leaderboard-user">Joe Shmoe</span>
-                        <span class="leaderboard-score">320</span>
-                    </div><!-- /.leaderboard-row -->
+            <div class="tab-section js-tab-section leaderboard leaderboard--all-time <% if current_user_record({slug:@game.slug, version: 3, timeframe:'alltime'})["rank"].to_i <= 10 %> leaderboard--omit-current <% end %>">
+                <%= render 'games/leaderboard_row', { leaderboard_type: "all-time", leaderboard_version: 3 } %>
 
-                    <div class="leaderboard-row">
-                        <span class="leaderboard-rank">3</span>
-                        <span class="leaderboard-user">Griff Hall</span>
-                        <span class="leaderboard-score">107</span>
-                    </div><!-- /.leaderboard-row -->
-
-                    <div class="leaderboard-row">
-                        <span class="leaderboard-rank">4</span>
-                        <span class="leaderboard-user">Tyler Cone</span>
-                        <span class="leaderboard-score">90</span>
-                    </div><!-- /.leaderboard-row -->
-                <!-- End Loop -->
+                <%= render 'games/leaderboard_current_user_row', { leaderboard_type: "all-time", leaderboard_version: 3 } %>
             </div>
 
-            <div class="tab-section js-tab-section leaderboard leaderboard--weekly">
-                <!-- Start Loop -->
-                <div class="leaderboard-row">
-                    <span class="leaderboard-rank">1</span>
-                    <span class="leaderboard-user">John Doe</span>
-                    <span class="leaderboard-score">687</span>
-                </div><!-- /.leaderboard-row -->
+            <div class="tab-section js-tab-section leaderboard leaderboard--weekly <% if current_user_record({slug:@game.slug, version: 3, timeframe:'weekly'})["rank"].to_i <= 10 %> leaderboard--omit-current <% end %>">
+                <%= render 'games/leaderboard_row', { leaderboard_type: "weekly", leaderboard_version: 3 } %>
 
-                <div class="leaderboard-row">
-                    <span class="leaderboard-rank">2</span>
-                    <span class="leaderboard-user">Joe Shmoe</span>
-                    <span class="leaderboard-score">320</span>
-                </div><!-- /.leaderboard-row -->
-                <!-- End Loop -->
+                <%= render 'games/leaderboard_current_user_row', { leaderboard_type: "weekly", leaderboard_version: 3 } %>
             </div>
+
         </section>
     </div><!-- /.leaderboard-diff --> <!-- end of ttrc conditional -->
 <% else %> <!--  ********************* Normal Leaderboard *********************  -->
     <section class="game-leaderboard">
-        <%= render 'games/friends_leaderboard' %>
+        <%= render 'games/leaderboard_friends_row' %>
 
         <div class="tab-section js-tab-section leaderboard leaderboard--all-time <% if current_user_record({slug:@game.slug,timeframe:'alltime'})["rank"].to_i <= 10 %> leaderboard--omit-current <% end %>">
-            <%= render 'games/leaderboard_row', leaderboard_type: "all-time"  %>
+            <%= render 'games/leaderboard_row', leaderboard_type: "all-time" %>
 
-            <%= render 'games/current_user_row', leaderboard_type: "all-time" %>
+            <%= render 'games/leaderboard_current_user_row', leaderboard_type: "all-time" %>
         </div> <!-- /.leaderboard--all-time -->
 
-        <div class="tab-section js-tab-section leaderboard leaderboard--weekly <% if current_user_record({slug:@game.slug,timeframe:'alltime'})["rank"].to_i <= 10 %> leaderboard--omit-current <% end %>"><!-- current_user_record({slug:@game.slug,timeframe:'alltime'})["rank"].to_i > 10 -->
-            <%= render 'games/leaderboard_row', leaderboard_type: "weekly"  %>
+        <div class="tab-section js-tab-section leaderboard leaderboard--weekly <% if current_user_record({slug:@game.slug,timeframe:'weekly'})["rank"].to_i <= 10 %> leaderboard--omit-current <% end %>"><!-- current_user_record({slug:@game.slug,timeframe:'alltime'})["rank"].to_i > 10 -->
+            <%= render 'games/leaderboard_row', leaderboard_type: "weekly" %>
 
-            <%= render 'games/current_user_row', leaderboard_type: "weekly" %>
+            <%= render 'games/leaderboard_current_user_row', leaderboard_type: "weekly" %>
         </div> <!-- /.leaderboard--weekly -->
     </section><!-- /.game-leaderboard -->
 
